    * owner_id: me, returns stickies assigned to the current user
    * unassigned: 1, returns stickies that are not assigned to a specific user
    * due_date_start_date and due_date_end_date can be specified as mm/dd/yy or mm/dd/yyyy
  * Sticky JSON API returns group_description
  * Updated to Rails 3.2.7
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility

* Bug Fix
  * Height of the drop down menu for sticky exports is now consistent with other drop down menus
  * Tags filters on stickies page no longer use colors for deleted tags

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.23.0

* Enhancements
  * Daily digest emails are now available for users who prefer a digest of the previous day included stickies added, completed, and comments made
  * Stickies can now be reassigned to another user in bulk from the project page
  * Users can now be added by email to projects without requiring the user to be signed up
  * Calendar Changes:
    * Calendar filters have been simplified and given a consistent look
    * Sticky popups are now cleaner and no longer display the words, 'description', 'project', or 'tags' as these can be deduced by context
    * Dragging grouped stickies on the calendar now prompts whether to move the invidual sticky, all incomplete stickies in the group, or all the stickies in the group

== 0.22.6

* Enhancements
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
  * The About page now references the Task Tracker forum and contact information
  * Sticky Changes:
    * Creating a group of stickies from the project page now refreshes and shows the newly created stickies
    * Cleaned up lists of stickies by changing how they expand when clicking on them
  * Template Changes:
    * Frames and Templates now require unique names per project
    * Templates can now be copied